samples/_failures_safe/1761473052_cb886e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_60d66134.c: In function ‘main’:
./samples/SAFE/__tmp_60d66134.c:158: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_60d66134.c:157:17: error: expected declaration or statement at end of input
  157 |                 } else if
      |                 ^
./samples/SAFE/__tmp_60d66134.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_60d66134.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_60d66134.c:157:17: error: expected declaration or statement at end of input
